# quixtor

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
quixtor/: asgi.py  settings.py  urls.py  wsgi.py
quixtor/products/: apps.py  models.py
quixtor/products/migrations/: 0001_initial.py
templates/: index.html
